# Company_intelligent_Chatbot

./: pyproject.toml
app/: config.py  main.py
app/service/Indexing/: document_modeling.py  document_paresing_and_extracting_structuerd.py  documnt_accution.py  normalization_and_cleaning.py
test/: sample.html  sample.md  test_complete_pipeline.py
